[package]
name    = "alloy-ext"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy          = { version = "1.0.24", features = ["full"] }
alloy-json-rpc = "1.0.24"
async-trait    = "0.1.88"
eyre           = "0.6.12"
futures        = "0.3.31"
itertools      = "0.14.0"
rand           = "0.9.2"
thiserror      = "2.0.12"
tower          = { version = "0.5.2", features = ["full"] }
tracing        = "0.1.41"
