[package]
name    = "alloy-ext"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy          = { version = "^1.0", features = ["full"] }
alloy-json-rpc = "^1.0"
async-trait    = "^0.1"
eyre           = "^0.6"
futures        = "^0.3"
itertools      = "^0.14"
rand           = "^0.9"
thiserror      = "^2.0"
tower          = { version = "^0.5", features = ["full"] }
tracing        = "^0.1"
